--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -7,6 +7,13 @@
     font-size: 16px;
 }
 
+@media (max-width: 800px) {
+    .card {
+        padding: 25px 0 15px;
+        box-shadow: none;
+    }
+}
+
 .card__title {
     font-size: 20px;
     line-height: 1;
